Add home.js module

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
 			<nav id=navbar>
 			</nav>
 		</header>
-		<div id="divcontent"></div>
+		<div id="divcontent">
+			<H1>The Tester Restaurant</H1>
+			<div id="imgContainer">
+			</div>
+		</div>
 	</body>
 </html>
